# paquete_hugo_fonseca

./: LICENSE  README.md  pyproject.toml
src/paquete_hugo_fonseca/: estadisticos.py
