[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paquete_hugo_fonseca"
version = "0.0.3"
authors = [
  { name="Hugo Fonseca", email="hugofonseca@usantotomas.edu.co" },
]
description = "Paquete de estadisticos descriptivos para la clase de ML para economistas"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zack0712/paquete_hugo_fonseca"
"Bug Tracker" = "https://github.com/zack0712/paquete_hugo_fonseca/issues"